# roydy

./: Dockerfile  README.md  docker-compose.yml
app/: Cargo.toml  Dioxus.toml  package.json
app/assets/: tailwind.css
app/src/: main.rs
roydy/: Cargo.toml
roydy/assets/: tailwind.css
roydy/src/: main.rs
